--- a/DAY44/6.3 CSS Box Model/index.html
+++ b/DAY44/6.3 CSS Box Model/index.html
@@ -6,12 +6,52 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    div {
+      height: 200px;
+      width: 200px;
+    }
+    
+    #first {
+      background-color: cadetblue;
+      border: 10px solid black;
+      padding: 20px;
+    }
+    /* by default for paragraph margin-block-start: 1em; to nullify we are adding 0 to it */
+    p {
+      margin: 0;
+    }
 
+    #second {
+      background-color: gold;
+      border: 10px solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+
+    #third {
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
   </style>
 </head>
 
 <body>
+  <div id="first">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+    id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+    dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
+    </p>
+  </div>
 
+  <div id="second">
+
+  </div>
+
+  <div id="third">
+
+  </div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
